# BioFoundry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  NOTICE  README.en.md  README.md  README_zh.md  biofoundry.spec  config.example.toml  pyproject.toml
Knowledge/Paper/: (2010-2023) Metabolic innovation.md  (2011) Molecular population genetics and selection in the glycolytic pathway.md  (2012) Network Context and Selection in the Evolution to Enzyme Specificity.md  (2014) Contribution of Selection for Protein Folding Stability in Shaping the Patterns of Polymorphisms in Coding Regions.md  (2014) The logic of metabolism and its fuzzy consequences.md  (2016) Adaptive evolution of complex innovations through stepwise metabolic niche expansion.md  (2017) Epistasis and dominance in the emergence of catalytic function as exemplified by the evolution of plant terpene synthases.md  (2017) Evolution of complex adaptations in molecular systems.md  (2018) Emerging ensembles of kinetic parameters to characterize observed metabolic phenotypes.md  (2020) Flux, toxicity, and expression costs generate complex genetic interactions in a metabolic pathway.md  Epistatic Interaction Maps Relative to Multiple Metabolic Phenotypes _ PLOS Genetics.md  Evolution of Enzymes in Metabolism_ A Network Perspective.md  Evolution of biomolecular networks — lessons from metabolic and protein interactions _ Nature Reviews Molecular Cell Biology.md  Evolutionary routes to biochemical innovation revealed by integrative analysis of a plant-defense related specialized metabolic pathway _ eLife.md  Metabolites _ Free Full-Text _ Current Understanding of the Formation and Adaptation of Metabolic Systems Based on Network Theory.md  README.md  VIP_ (2014) Accuracy-rate tradeoffs_ how do enzymes meet demands of selectivity and catalytic efficiency.md  VIP_ (2014) An ensemble evolutionary constraint-based approach to understand the emergence of metabolic phenotypes.md  VIP_ (2023) Epistasis and evolution_ recent advances and an outlook for prediction.md  VIP_ Catalytic efficiency and kcat_KM_ a useful comparator_.md  (+7 more)
docs/: CHANGELOG.md  MinerU_markdown_s41467-025-61209-y_2061629083273142272.md  facility-integration-requirements.md  synpan-mcp.md  xingpan-mcp.md
scripts/: install.ps1  install.sh
tests/: test_embedded_knowledge.py  test_openai_interfaces.py  test_rebrand.py  test_sanger_align.py  test_synpan_mcp.py  test_xingpan_mcp.py
(+177 files in other folders)
